Update projeto final
update arquivo tableau

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ LABS/data/publications.sql
 LABS/data/publications_database.sql
 LABS/data_visualization_with_tableau.md
 LABS/generic_pipeline/
+PROJECTS/Auxilio/ae_20_21_tratado_final+.hyper
